# tree-sitter-melcor

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-melcor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_melcor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMelcor/: melcor.h
bindings/swift/TreeSitterMelcorTests/: TreeSitterMelcorTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
